@@ -21,8 +21,7 @@
 # BIP32 Key Derivation Path (to the 1st key)
 # Default is m/0'
 # Example paths for known wallet implementations:
-#  m/0/0 - Electrum receiving addresses
-#  m/1/0 - Electrum change addresses
+#  m/0/0 - Electrum
 #  m/0'/0'/0' - Bitcoin Core
 #  m/0'/0/0 - Multibit HD, BRD Wallet
 #  m/44'/0'/0'/0 - Coinomi, Ledger
@@ -31,6 +30,18 @@
 #  m/84'/0'/0'/0/0 - Wasabi, Mycelium, Samourai SegWit native (Bech32)
 # The value is ignored for wallet type different than 4.
 #hdpath=m/0'
+
+# Number of HD Wallet's sub-accounts to calculate keys for
+# Typically used to include the list of change addresses
+#  ... along with the deposit addresses.
+# The default is 1
+# The value is ignored for wallet type different than 4
+# Example:
+#  for hdpath=m/84'/0'/0'/0/0 and hdchains=2
+#  it will calculate addresses for both:
+#    m/84'/0'/0'/0/n
+#    m/84'/0'/0'/1/n
+#hdsubs=2
 
 # Create HD Wallet in BIP39 mode with 12, 15, 18, 21 or 24 words seed.
 # Default value of 0 creates a wallet that is not BIP39 compatible.
